# framework-mandel-strangeloop-influenced

./: # Fractal Communication Framework- Mandelbrot Linguistic Dynamics.md  ## The Mathematics of Linguistic Fractals.md  .gitignore  CLAUDE.md  Cargo.toml  CognitiveAnthropicManager.rs  README.md  april41056.md  claude-settingsjsoncv1.jsonc  cognitive_state.json  collab.md  evolved_cognitive_state.json  fracprpojcursor.code-workspace  gem-4.md  gem-reflection.md  gem25.md  gemrevyaml2.yaml  global-mem-goose.json  mandelbrot.lua  new.md  package-lock.json  package.json  powershell-add-to-shell.md  removevs.md  timeline.md  todo.md  trojan.md  yaml-sprav-alterted.yaml  yaml2.yaml
docs/: I'll explain Rust's structure and conven.md  kuber.md  rust-cheatsheet.md  start.md
fractal-proj/: Fractal Communication and Recursive Integration.md  README.md  Recursive Fractal Communication and Integration.md  alt-openaisettingjsoncv1.jsonc  claude-type.md  collab.md  gem-repsp-3.md  gem-resp2.md  gem2yaml.md  gemrevyaml2.yaml  init.md  luaframe.lua  merge.yaml  meta-analysis-analysis-claude-2.md  o3.md  settingstodo.jsonc  settingsv1.jsonc  total-analysis-4.md  yaml-model-orig.yaml  yaml_therapeutic_model_v3.yaml
fractal-proj/applications/: README.md
fractal-proj/core/: README.md
fractal-proj/models/: README.md
fractal-proj/tools/: README.md
interactive/: README.md  gem-gpt-resp.md  gem-tag-demo.md  index.html  main.jsx  package-lock.json  package.json  script.jsx  todo.md  vite.config.js
interactive/src/: App.jsx
interactive/src/components/: FractalThoughtProcess.jsx  FractalVisualization.jsx  FractalVisualization.tsx  MetaCInterventionTool.jsx  NovaActBridge.jsx  NovaActConfig.jsx
interactive/src/lib/: NovaActAPIBridge.js
interactive/src/theme/: darkTheme.js
interactive/src/utils/: framework.js  useLocalStorage.js
lua/: mandelbrot.lua  mandelbrot_communication.lua
src/: CognitiveAnthropicManager.rs  Compiling framework-mandel-strangeloop-i.md  anthropic-api.rs  cognitive_anthropic_manager.rs  fractal_communication.rs  lib.rs  main.rs
